--- a/src/style.css
+++ b/src/style.css
@@ -61,6 +61,21 @@ li::first-letter {
   margin: 30px auto;
 }
 
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+.weather-forecast-date {
+  font-size: 16px;
+  color: #000;
+  opacity: 0.5;
+}
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
 .weather-temperature img {
   margin-right: 5px;
   height: 64px;
