--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,10 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #083359;
-}
-a {
-  text-decoration: none;
-  color: #75a3bf;
-  transition: ease-in-out 150ms;
+  font-family: arial, sans-serif;
 }
 
-a.hover {
-  color: #224459;
-}
 h1 {
-  color: #083359;
-  font-size: 28px;
+  color: #878787;
+  font-size: 24px;
   font-weight: 100;
   line-height: 28px;
   margin-bottom: 0;
@@ -26,56 +17,36 @@ ul {
 
 li {
   list-style: none;
-  color: rgb (135, 135, 135);
+  margin: 0;
+  padding: 0;
+
+  color: rgb(135, 135, 135);
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
 }
 
-li::first-letter {
+li:first-letter {
   text-transform: capitalize;
 }
-
-.footer {
-  color: #fff;
+.row {
+  margin: 0 0 20px 0;
 }
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
 .overview {
   margin-bottom: 20px;
 }
 
-.text-input {
-  border-radius: 5px;
-}
-.units {
-  text-decoration: none;
-}
-
-.weather-app {
-  padding: 50px;
-  border: 1px solid #dadde1;
-  border-radius: 15px;
-  background-color: #e9eff2;
-}
-.weather-app-wrapper {
-  max-width: 500px;
-  margin: 30px auto;
-}
-
-.weather-forecast {
-  margin-top: 20px;
-  text-align: center;
-}
-.weather-forecast-date {
-  font-size: 16px;
-  color: #000;
-  opacity: 0.5;
-}
-.weather-forecast-temperatures {
-  font-size: 13px;
-}
-.weather-forecast-temperature-min {
-  opacity: 0.5;
-}
 .weather-temperature img {
   margin-right: 5px;
   height: 64px;
@@ -93,4 +64,32 @@ li::first-letter {
   position: relative;
   font-size: 16px;
   top: -34px;
+}
+
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
 }
