--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,20 @@
 body {
   font-family: arial, sans-serif;
   background-color: #ecebed;
+  height: 100%;
 }
 .dark {
-  background-color: #303030;
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(0, 0, 0) 0%,
+    rgb(64, 64, 64) 90.2%
+  );
 }
 
 .light {
   background-color: #ecebed;
 }
+
 h1 {
   color: #000000;
   font-size: 28px;
@@ -96,6 +102,7 @@ li:first-letter {
   margin-left: 10px;
   margin-top: 10px;
   max-height: 60px;
+  opacity: 100;
 }
 .row {
   display: flex;
