--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,9 @@ body {
 .dark .weather-forecast-temperatures {
   color: #fff;
 }
+.dark .footer {
+  color: #fff;
+}
 h1 {
   color: #000000;
   font-size: 28px;
